Targets JDK1.5. Moved some utility classes from Carbonado into Cojen.